--- a/src/components/TodoComponents/Todo.css
+++ b/src/components/TodoComponents/Todo.css
@@ -1,7 +1,59 @@
 .completedTodo{
-    /* background: grey; */
     text-decoration: line-through;
+    color: rgb(121, 121, 121);
 }
 .incompletedTodo{
     /* background: lightgrey; */
+}
+
+html{
+    /* font-size: 62.5%; */
+    font-family: 'Lato', sans-serif;
+}
+
+body {
+    background-image: url("../../images/herringbone.png");
+}
+
+.todoList{
+    max-width: 30rem;
+    margin: 50px auto;
+    border: 1px solid grey;
+    padding: 3rem;
+    background: rgba(155, 155, 155, 0.6);
+    
+    box-shadow: 1px 1px 2px;
+    border-radius: 3px;
+}
+
+.customButton{
+    border-radius: 10px;
+    border: 1px solid gray;
+    font-size: 1.2rem;
+}
+
+.addButton{
+    background: #90CDF4;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.clearButton{
+    background: #FAF089;
+    margin: 0.7rem 0;
+}
+
+li{
+    font-size: 1.2rem;
+    margin-bottom: 0.4rem;
+}
+
+input{
+    font-size: 1.2rem;
+    /* margin-left: 1rem; */
+    padding-left: 1.5rem;
+    border-radius: 10px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border: 1px solid grey;
 }
